# pyoperators

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENCE_FR  MANIFEST.in  README.md  README.rst  _config.yml  credits.txt  feed.xml  hooks.py  index.html  meson.build  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: build.yml  ci.yml  pre-commit.yml  release.yml
_layouts/: default.html  post.html
_posts/: 00-01-01-doc-examples.textile  00-01-01-doc-getting-started.textile  00-01-01-doc-iterative-algorithms.textile  00-01-01-doc-mpi-examples.textile  00-01-01-doc-operators.textile  00-01-01-doc-solvers.textile  01-10-12-blog-pyoperators-0.5.textile  12-01-06-blog-pyoperators-0.1.md  12-01-06-blog-pyoperators-0.1.textile  12-01-12-blog-pyoperators-0.2.md  12-01-12-blog-pyoperators-0.2.textile  12-01-30-blog-pyoperators-0.3.md  12-01-30-blog-pyoperators-0.3.textile  12-06-07-blog-pyoperators-0.4.md  12-06-07-blog-pyoperators-0.4.textile  12-07-12-blog-pyoperators-0.5.md  12-07-12-blog-pyoperators-0.5.textile  12-10-01-blog-pyoperators-0.6.md  12-10-01-blog-pyoperators-0.6.textile  12-11-15-blog-pyoperators-0.7.md  12-11-15-blog-pyoperators-0.7.textile  13-09-05-blog-pyoperators-0.8.md  13-09-05-blog-pyoperators-0.8.textile  13-10-14-blog-pyoperators-0.9.md  13-10-14-blog-pyoperators-0.9.textile  14-01-16-blog-pyoperators-0.10.md  14-01-16-blog-pyoperators-0.10.textile  14-02-26-blog-pyoperators-0.11.md  14-02-26-blog-pyoperators-0.11.textile  14-05-14-blog-pyoperators-0.12.md  14-05-14-blog-pyoperators-0.12.textile  14-10-15-blog-pyoperators-0.13.md  14-10-15-blog-pyoperators-0.13.textile
archive/: index.html
contact/: index.html
credits/: index.md  index.textile
css/: screen.css  syntax.css
documentation/: examples.md  getting-started.md  index.html  index.md  index.textile  iterative-algorithms.md  mpi-examples.md  operators.md  solvers.md
download/: index.textile
installation/: index.html  index.md  index.textile  install-fftw.sh
operators/: __init__.py  core.py  decorators.py  linear.py  memory.py  nonlinear.py  operators.py  pywt_operators.py  utils.py
operators/iterative/: __init__.py  algorithms.py  criterions.py  dli.py  optimize.py
pyoperators/: __init__.py  __init__.py.in  axes.py  brackets.py  caller.py  config.py  core.py  decorators.py  fft.py  flags.py  linear.py  memory.py  mpi_operators.py  nonlinear.py  operators_mpi.py  operators_pywt.py  proxy.py  pywt_operators.py  rules.py  utils.py  warnings.py
pyoperators/iterative/: __init__.py  algorithms.py  cg.py  core.py  criterions.py  dli.py  lanczos.py  linesearch.py  optimize.py  stopconditions.py
pyoperators/utils/: __init__.py  cythonutils.c  cythonutils.pyx  fake_MPI.py  misc.py  mpi.py  testing.py  ufuncs.c.src
search/: index.html
src/: meson.build
src/pyoperators/: __init__.py  core.py  fft.py  flags.py  linear.py  meson.build  nonlinear.py  operators_mpi.py  operators_pywt.py  proxy.py  rules.py  warnings.py
src/pyoperators/iterative/: algorithms.py  cg.py  core.py  criterions.py  dli.py  linesearch.py  meson.build  optimize.py  stopconditions.py
src/pyoperators/utils/: cythonutils.pyx  fake_MPI.py  meson.build  misc.py  testing.py  ufuncs.c  ufuncs.c.src
test/: common.py  test_algorithms.py  test_brackets.py  test_broadcastingoperators.py  test_caller.py  test_core.py  test_criterions.py  test_decorators.py  test_delete.py  test_dense.py  test_fft.py  test_flags.py  test_identity.py  test_iterative.py  test_linear.py  test_memory.py  test_mpi.py  test_nbytes.py  test_nonlinear.py  test_partition.py  test_proxy.py  test_pywt.py  test_reset.py  test_rules.py  test_shape_strides.py  test_sparse.py  test_stopconditions.py  test_str.py  test_ufuncs.py  test_utils.py  test_zero.py
tests/: common.py  test_algorithms.py  test_attribute_propagation.py  test_broadcastingoperators.py  test_class_propagation.py  test_composition.py  test_core.py  test_criterions.py  test_decorators.py  test_delete.py  test_dense.py  test_dtype.py  test_fft.py  test_flags.py  test_identity.py  test_inplace_outofplace.py  test_iterative.py  test_linear.py  test_memory.py  test_mpi.py  test_mpi_comms.py  test_nbytes.py  test_nonlinear.py  test_operators.py  test_partition.py  test_proxy.py  test_pywt.py  test_rules.py  test_shared.py  test_sparse.py  test_stopconditions.py  test_str.py  test_ufuncs.py  test_utils.py  test_zero.py  utils.py
