[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "Cython>=0.13",
    "oldest-supported-numpy",
    "pchanial-legacy-install-hooks",
    "setuptools==64.0.3",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]

[project]
name = "pyoperators"
authors = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
maintainers = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
description = "Operators and solvers for high-performance computing."
readme = "README.rst"
keywords = [
    "scientific computing",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "numexpr>=2",
    "numpy>=1.6",
    "scipy>=0.9",
]
dynamic = ["version"]

[project.optional-dependencies]
fft = ["pyfftw"]
mpi = ["mpi4py"]
wavelets = ["pywavelets"]
dev = [
    "pyfftw",
    "mpi4py",
    "pywavelets",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pchanial-legacy-install-hooks",
]

[project.urls]
homepage = "https://pchanial.github.io/pyoperators"
repository = "https://github.com/pchanial/pyoperators"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "-ra --cov=pyoperators"
testpaths = [
    "test",
]

[tool.setuptools.packages.find]
include = ["pyoperators*"]

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "0.0.0"
