[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "Cython>=0.13",
    "oldest-supported-numpy",
    "setuptools==64.0.3",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]

[project]
name = "pyoperators"
authors = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
maintainers = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
description = "Operators and solvers for high-performance computing."
readme = "README.md"
keywords = [
    "scientific computing",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "numexpr>=2",
    "numpy>=1.16",
    "scipy>=0.9",
]
dynamic = ["version"]

[project.optional-dependencies]
fft = ["pyfftw"]
mpi = ["mpi4py"]
wavelets = ["pywavelets>=0.4.0"]
dev = [
    "pyfftw",
    "mpi4py",
    "pywavelets>=0.4.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pchanial-legacy-install-hooks",
    "setuptools_scm",
]

[project.urls]
homepage = "https://pchanial.github.io/pyoperators"
repository = "https://github.com/pchanial/pyoperators"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "-ra --cov=pyoperators"
testpaths = [
    "tests",
]

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "0.0.0"
