[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "meson>=1.1.0",
    "ninja",
    "Cython>=0.29.30",
    "numpy>=2.0.0",
    "setuptools_scm[toml]>=6.2",
]

[project]
name = "pyoperators"
authors = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
maintainers = [
    {name = "Pierre Chanial", email = "pierre.chanial@gmail.com"},
]
description = "Operators and solvers for high-performance computing."
readme = "README.md"
keywords = [
    "scientific computing",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "numexpr>=2",
    "numpy>=2.0",
    "scipy>=1.10",
]
dynamic = ["version"]

[project.optional-dependencies]
fft = ["pyfftw"]
mpi = ["mpi4py"]
wavelets = ["pywavelets>=0.4.0"]
dev = [
    "ninja",
    "mpi4py",
    "pyfftw",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pywavelets>=0.4.0",
    "setuptools_scm",
]

[project.urls]
homepage = "https://pchanial.github.io/pyoperators"
repository = "https://github.com/pchanial/pyoperators"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "-ra --cov=pyoperators"
testpaths = [
    "tests",
]

[tool.setuptools_scm]
version_scheme = "post-release"
fallback_version = "0.0.0"
