# Get all Python source files in this directory
py.install_sources(
  [
    '__init__.py',
    'config.py',
    'core.py',
    'fft.py',
    'flags.py',
    'linear.py',
    'memory.py',
    'nonlinear.py',
    'operators_mpi.py',
    'operators_pywt.py',
    'proxy.py',
    'rules.py',
    'warnings.py',
  ],
  subdir: 'pyoperators'
)

# Add subdirectories
subdir('iterative')
subdir('utils')
