# Install Python sources for iterative subpackage
py.install_sources(
  [
    '__init__.py',
    'algorithms.py',
    'cg.py',
    'core.py',
    'criterions.py',
    'dli.py',
    'lanczos.py',
    'linesearch.py',
    'optimize.py',
    'stopconditions.py',
  ],
  subdir: 'pyoperators/iterative'
)
